stylesheets/_palette.base.scss
/* -------------------------------------------------------------------------- *\
    Base palettes

    Defines what value a specific named colour should be. Used in conjunction
    with _config.theme.scss to defined how specific Jadu control centre elements
    should be styled in regards to colour.

    These colours are defined in the Jadu Brand Guidelines (version 4)
\* -------------------------------------------------------------------------- */

$palette-branding: (
    jadu-purple: (
        darkest:    rgb(46, 54, 112),
        dark:       rgb(52, 61, 128),
        base:       rgb(61, 71, 150),
        light:      rgb(86, 96, 173),
        pale:       rgb(104, 113, 183)
    ),
    jadu-red: (
        darkest:     rgb(115, 19, 19),
        dark:        rgb(154, 23, 23),
        base:        rgb(192, 28, 29),
        light:       rgb(218, 32, 33),
        pale:        rgb(231, 58, 34)
    ),
    jadu-blue: (
        darkest:     rgb(34, 101, 134),
        dark:        rgb(45, 134, 179),
        base:        rgb(51, 153, 204),
        light:       rgb(96, 176, 215),
        pale:        rgb(164, 210, 223)
    ),
    jadu-green: (
        darkest:     rgb(81, 116, 35),
        dark:        rgb(107, 156, 47),
        base:        rgb(128, 186, 39),
        light:       rgb(164, 200, 88),
        pale:        rgb(189, 214, 134)
    ),
    jadu-teal: (
        darkest:     rgb(51, 115, 104),
        dark:        rgb(69, 154, 140),
        base:        rgb(84, 185, 169),
        light:       rgb(134, 201, 191),
        pale:        rgb(140, 210, 202)
    ),
    jadu-pink: (
        darkest:     rgb(137, 50, 71),
        dark:        rgb(183, 67, 95),
        base:        rgb(220, 81, 114),
        light:       rgb(224, 105, 133),
        pale:        rgb(239, 180, 195)
    )
);

$palette-monochromes: (
    white: (base:   rgb(255, 255, 255)),
    black: (base:   rgb(30, 30, 30)),
    gray:  (
        darker:      rgb(62, 62, 62),
        dark:        rgb(95, 95, 95),
        dull:        rgb(117, 117, 117),
        base:        rgb(126, 126, 126),
        light:       rgb(157, 157, 157),
        lighter:     rgb(190, 190, 190),
        lightest:    rgb(222, 222, 222),
        off-white:   rgb(239, 239, 239)
    )
);

/* -------------------------------------------------------------------------- *\
    States

    The colour and its alternate MUST meet WCAG 2.0 AA compliance for contrast
\* -------------------------------------------------------------------------- */

$palette-states: (
    base: (
        base:  map-get(map-get($palette-monochromes, gray), lightest),
        alt:   pick_best_color(map-get(map-get($palette-monochromes, gray), lighter), (#fff, #000)),
        light: lighten(map-get(map-get($palette-monochromes, gray), lightest), 5),
        dark:  map-get(map-get($palette-monochromes, gray), darker)
    ),
    primary: (
        base:  #2575b0,
        alt:   pick_best_color(#2575b0, (#fff, #000)),
        light: lighten(#2575b0, 45),
        dark:  darken(#2575b0, 5)
    ),
    success: (
        base:  #297c46,
        alt:   pick_best_color(#297c46, (#fff, #000)),
        light: lighten(#297c46, 55),
        dark:  darken(#297c46, 5)
    ),
    warning: (
        base:  #eaa96a,
        alt:   pick_best_color(#eaa96a, (#fff, #000)),
        light: lighten(#eaa96a, 25),
        dark:  darken(#eaa96a, 35)
    ),
    danger: (
        base:  #c84d40,
        alt:   pick_best_color(#c84d40, (#fff, #000)),
        light: lighten(#c84d40, 40),
        dark:  darken(#c84d40, 5)
    ),
    info: (
        base:  map-get(map-get($palette-branding, jadu-blue), pale),
        alt:   pick_best_color(map-get(map-get($palette-branding, jadu-blue), pale), (#fff, #000)),
        light: lighten(map-get(map-get($palette-branding, jadu-blue), pale), 15),
        dark:  darken(map-get(map-get($palette-branding, jadu-blue), pale), 40)
    ),
    inverse: (
        base:  map-get(map-get($palette-monochromes, gray), darker),
        alt:   pick_best_color(map-get(map-get($palette-monochromes, gray), darker), (#fff, #000)),
        light: lighten(map-get(map-get($palette-monochromes, gray), darker), 60),
        dark:  map-get(map-get($palette-monochromes, gray), darker)
    ),
    white: (
        base:  #fff,
        alt:   map-get(map-get($palette-monochromes, gray), darker),
        light: #fff,
        dark:  map-get(map-get($palette-monochromes, gray), off-white)
    ),
    new: (
        base:  #f0f5fd,
        alt:   #000,
        light: lighten(#f0f5fd, 5),
        dark:  darken(#f0f5fd, 5)
    ),
    sorting: (
        base: #ffffec,
        dark: darken(#ffc, 50)
    )
);

/* -------------------------------------------------------------------------- *\
    Combined States

    Loop over this using:

    @each $state, $state-color, $state-color-alt in $state-colors { ... }
\* -------------------------------------------------------------------------- */

// scss-lint:disable SpaceAfterComma

$state-colors:
    (base,      map-get(map-get($palette-states, base), base),    map-get(map-get($palette-states, base), alt)),
    (primary,   map-get(map-get($palette-states, primary), base), map-get(map-get($palette-states, primary), alt)),
    (success,   map-get(map-get($palette-states, success), base), map-get(map-get($palette-states, success), alt)),
    (warning,   map-get(map-get($palette-states, warning), base), map-get(map-get($palette-states, warning), alt)),
    (danger,    map-get(map-get($palette-states, danger), base),  map-get(map-get($palette-states, danger), alt)),
    (info,      map-get(map-get($palette-states, info), base),    map-get(map-get($palette-states, info), alt)),
    (inverse,   map-get(map-get($palette-states, inverse), base), map-get(map-get($palette-states, inverse), alt)),
    (white,     map-get(map-get($palette-states, white), base), map-get(map-get($palette-states, white), alt)),
    (new,       map-get(map-get($palette-states, new), base),     map-get(map-get($palette-states, new), alt));

// scss-lint:enable SpaceAfterComma

/* -------------------------------------------------------------------------- *\
    Aliases
\* -------------------------------------------------------------------------- */

$palette-alias: (
    text: (
        base:     #000,
        help:     map-get(map-get($palette-monochromes, gray), dull),
        light:    map-get(map-get($palette-monochromes, gray), dull),
        disabled: map-get(map-get($palette-monochromes, gray), lighter),
        placeholder: #737373
    ),
    link: (
        base:     #22759f, // WCAG 5.1 AA compliant
        dark:     darken(#22759f, 5),
        hover:    #000,
        focus:    darken(#22759f, 15),
        inverse:  #fff,
        inverse-hover: darken(#fff, 10%),
        disabled:  map-get(map-get($palette-monochromes, gray), lighter)
    ),
    border: (
        base:      map-get(map-get($palette-monochromes, gray), base),
        focus:     #fd0
    ),
    background: (
        base:      map-get(map-get($palette-monochromes, gray), off-white),
        dark:      map-get(map-get($palette-monochromes, gray), lightest),
        light:     lighten(map-get(map-get($palette-monochromes, gray), off-white), 2),
        selected:  map-get(map-get($palette-states, info), light),
        focus:     #fd0
    ),
);

